--- a/Calculadora_Areas_Perimetros/Calculadora_Areas_Perimetros.csproj
+++ b/Calculadora_Areas_Perimetros/Calculadora_Areas_Perimetros.csproj
@@ -52,8 +52,40 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="NavigationButtons.cs" />
+    <Compile Include="NavigationControl.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserControls\Circle.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\Circle.Designer.cs">
+      <DependentUpon>Circle.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Heptagon.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\Heptagon.Designer.cs">
+      <DependentUpon>Heptagon.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Square.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\Square.Designer.cs">
+      <DependentUpon>Square.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Trapezoid.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\Trapezoid.Designer.cs">
+      <DependentUpon>Trapezoid.cs</DependentUpon>
+    </Compile>
+    <Compile Include="UserControls\Triangle.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="UserControls\Triangle.Designer.cs">
+      <DependentUpon>Triangle.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -65,7 +97,23 @@
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
+      <DesignTime>True</DesignTime>
     </Compile>
+    <EmbeddedResource Include="UserControls\Circle.resx">
+      <DependentUpon>Circle.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\Heptagon.resx">
+      <DependentUpon>Heptagon.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\Square.resx">
+      <DependentUpon>Square.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\Trapezoid.resx">
+      <DependentUpon>Trapezoid.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="UserControls\Triangle.resx">
+      <DependentUpon>Triangle.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -78,6 +126,21 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\area-del-cuadrado-100x100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\area-del-circulo-100x100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\area-del-trapezoide-100x100.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\area-del-triangulo-100x87.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\area-del-heptagono-100x98.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
