--- a/Calculadora_Areas_Perimetros/Calculadora_Areas_Perimetros.csproj
+++ b/Calculadora_Areas_Perimetros/Calculadora_Areas_Perimetros.csproj
@@ -25,8 +25,8 @@
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>https://madmanjohnsmith.github.io/Calculadora_Areas_Perimetros/Calculadora_Areas_Perimetros/madmanjohnsmith.github.io/Calculadora_Areas_Perimetros/</InstallUrl>
     <UpdateUrl>https://madmanjohnsmith.github.io/Calculadora_Areas_Perimetros/Calculadora_Areas_Perimetros/madmanjohnsmith.github.io/Calculadora_Areas_Perimetros/</UpdateUrl>
-    <ApplicationRevision>0</ApplicationRevision>
-    <ApplicationVersion>1.0.0.0</ApplicationVersion>
+    <ApplicationRevision>2</ApplicationRevision>
+    <ApplicationVersion>1.0.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <PublishWizardCompleted>true</PublishWizardCompleted>
     <BootstrapperEnabled>true</BootstrapperEnabled>
